--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
+atomicwrites==1.2.1
 attrs==18.2.0
 certifi==2018.11.29
 flake8==3.6.0
 flake8-mypy==17.8.0
 mccabe==0.6.1
+more-itertools==5.0.0
 mypy==0.660
 mypy-extensions==0.4.1
+pluggy==0.8.1
+py==1.7.0
 pycodestyle==2.4.0
 pyflakes==2.0.0
+pytest==4.1.1
+six==1.12.0
 typed-ast==1.2.0
 yapf==0.25.0
