--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 atomicwrites==1.2.1
 attrs==18.2.0
 certifi==2018.11.29
+coverage==4.5.2
 flake8==3.6.0
 flake8-mypy==17.8.0
 mccabe==0.6.1
@@ -12,6 +13,7 @@ py==1.7.0
 pycodestyle==2.4.0
 pyflakes==2.0.0
 pytest==4.1.1
+pytest-cov==2.6.1
 six==1.12.0
 typed-ast==1.2.0
 yapf==0.25.0
