--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ mccabe==0.6.1
 more-itertools==5.0.0
 mypy==0.660
 mypy-extensions==0.4.1
+numpy==1.16.0
 pluggy==0.8.1
 py==1.7.0
 pycodestyle==2.4.0
