--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python: 3.6
 install:
   - pip install -r requirements.txt
-  - pip install .
+  - pip install -e .
 script: pytest
 after_success:
   - pip install python-coveralls
