--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,8 @@ language: python
 python: 3.6
 install:
   - pip install -r requirements.txt
-  # https://github.com/z4r/python-coveralls/issues/61
-  - pip install coverage==4.4.2
   - pip install -e .
 script: pytest
 after_success:
-  - pip install python-coveralls
+  - pip install coveralls
   - coveralls
