--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 python: 3.6
 install:
-  - pip install -r requirements.txt
+  - pip install -r requirements-test.txt
   - pip install -e .
 script: pytest
 after_success:
