--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   - 3.7
 install:
   - pip install flit
-  - flit install --symlink --deps test
+  - flit install --symlink --extras test
 script: pytest
 after_success:
   - pip install coveralls
