--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ author = "Kemal Kurniawan"
 author-email = "kemal@kkurniawan.com"
 home-page = "https://github.com/kmkurn/text2array"
 requires = ["numpy", "tqdm"]
-requires-python = "~=3.6"
+requires-python = ">=3.6,<4"
 description-file = "README.rst"
 classifiers = [
     "Development Status :: 3 - Alpha",
