--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,2 @@
 [pytest]
-addopts = --cov text2array --cov-report term-missing --cov-report html
+addopts = --cov text2array --cov-report term-missing --cov-report html --doctest-modules
