--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ module = "text2array"
 author = "Kemal Kurniawan"
 author-email = "kemal@kkurniawan.com"
 home-page = "https://github.com/kmkurn/text2array"
-requires = ["numpy", "tqdm"]
+requires = ["numpy", "tqdm", "ordered-set ~=3.1.1"]
 requires-python = ">=3.6,<4"
 description-file = "README.rst"
 classifiers = [
