--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,3 +27,6 @@ dev = ["flake8", "yapf", "mypy ~=0.770"]
 
 [tool.flit.metadata.urls]
 Documentation = "https://text2array.readthedocs.io"
+
+[tool.black]
+line-length = 96
