--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
 [tool.flit.metadata.requires-extra]
 test = ["pytest ~=5.2.1", "pytest-cov"]
 doc = ["Sphinx ~=1.8.3", "sphinx_rtd_theme", "sphinx-autodoc-typehints ~=1.6.0"]
-dev = ["flake8", "yapf", "mypy ~=0.770"]
+dev = ["flake8", "mypy ~=0.770", "black ~=19.10b0"]
 
 [tool.flit.metadata.urls]
 Documentation = "https://text2array.readthedocs.io"
