--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# VSCode
-settings.json
+.vscode
 
 # Created by https://www.gitignore.io/api/python
 # Edit at https://www.gitignore.io/?templates=python
