--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests, and upload test coverage
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: 'Run tests and upload coverage'
+name: 'Run tests'
 
 on:
   push:
